Completed and tested Tickets routes
